# master-of-coin

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: format.yml  lint.yml  test.yml
src/: dummy.py
tests/: test_dummy.py
