[tool.poetry]
name = "master-of-coin"
version = "0.1.0"
description = "Track and manage a personal finance portfolio"
authors = ["Ashesh Anand <62696185+ashesh705@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
ipython = "^8.0.1"
isort = "^5.10.1"
black = "^21.12b0"
flake8 = "^4.0.1"
mypy = "^0.931"
pre-commit = "^2.17.0"
taskipy = "^1.9.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.taskipy.tasks]
format = { cmd = "isort . && black .", help = "Fix all code formatting issues" }
format-check = { cmd = "isort . -c && black --check .", help = "Check code for formatting issues" }
lint-check = { cmd = "flake8 && mypy .", help = "Check code for any lint issues" }
test = { cmd = "python -m pytest --cov", help = "Run all unit tests and produce coverage reports" }

[tool.pytest.ini_options]
addopts = "-ra -v"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source = [
    "src"
]
